# capy-world

./: .gitignore  Makefile  docker-compose.prod.yaml  docker-compose.yaml
backend/biboon/: .env  Dockerfile  Makefile  README.md  entrypoint.sh  main.py  pyproject.toml  test.py
backend/biboon/config/: __init__.py  constants.py  redis.py  storage.py
backend/biboon/config/message_transmitter/: __init__.py  interfaces.py  rabbitmq_transmitter.py
backend/biboon/src/modules/: __init__.py  routers.py
backend/biboon/src/modules/core/: urls.py  views.py
backend/biboon/src/modules/realm/: connection_manager.py  urls.py  views.py
backend/biboon/src/utils/: transmitter_utils.py
backend/biboon/test/: index.html  test.py
backend/core/: .env  .gitignore  Dockerfile  Makefile  entrypoint.sh  pyproject.toml
backend/core/config/: urls.py  yasg.py
backend/core/config/settings/: __init__.py  base.py  constants.py  database.py  drf.py  logger.py  security.py
backend/core/src/: routes.py
backend/core/src/account/: apps.py  urls.py
backend/core/src/account/views/: __init__.py  register_user_view.py  user_info_view.py
backend/core/src/auth/: apps.py
backend/core/src/core/: mixins.py  views.py
backend/core/src/core/services/: __init__.py  get_user_servers_service.py
backend/core/src/landing/: apps.py  urls.py
backend/core/src/landing/templates/: landing_page.html
backend/core/src/landing/views/: __init__.py  landing_page_view.py
backend/core/src/profile/: apps.py  urls.py
backend/core/src/profile/views/: __init__.py
backend/core/src/realm/: admin.py  apps.py  urls.py
backend/core/src/realm/daos/: __init__.py  biboon_dao.py  server_dao.py
backend/core/src/realm/migrations/: 0001_initial.py  0002_alter_server_admin.py  0002_alter_server_description_alter_server_image.py  0003_alter_servermember_unique_together.py  0003_remove_server_image.py
backend/core/src/realm/models/: __init__.py  server.py  server_members.py
backend/core/src/realm/services/: __init__.py  create_server_service.py  get_server_data_service.py  get_user_servers_service.py  join_to_server_service.py
backend/core/src/realm/view/: __init__.py  create_server_view.py  join_to_server_view.py
backend/core/src/realm/views/: __init__.py  chat_page.py  create_server_view.py  get_user_server_view.py  home_page.py  join_to_server_view.py  realm_page.py
backend/core/templates/: base.html
backend/core/templates/base/: base.html  base_home.html  base_landing.html
backend/ws-server/: .env  Dockerfile  entrypoint.sh  main.py  pyproject.toml
backend/ws-server/config/: __init__.py  constants.py  logger.py  rabbitmq_client.py
(+71 files in other folders)
